Initial dist subtree commit

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="./bundle.js" defer></script>
     <header>
         <ul>
-            <li><a class="home" href="#"> Home </a></li>
-            <li><a class="menus" href="#"> Menu </a></li>
-            <li><a class="contact" href="#"> Contact </a></li>
+            <li><a id="home" href="#"> Home </a></li>
+            <li><a id="menus" href="#"> Menu </a></li>
+            <li><a id="contact" href="#"> Contact </a></li>
         </ul>
     </header>
     <div id="content"></div>
